# full-py-package-template

./: README.md  cookiecutter.json
templates/: header.j2
{{cookiecutter.repo_name}}/: .flake8  .gitignore  MANIFEST.in  README.md  compose-dev.yaml  pyproject.toml  release  setup.py  tox.ini
{{cookiecutter.repo_name}}/.github/workflows/: publish.yml  test.yml
{{cookiecutter.repo_name}}/docs/source/: conf.py  contributors.rst  index.rst
{{cookiecutter.repo_name}}/docs/source/_templates/: module-template.rst
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  _info.py
{{cookiecutter.repo_name}}/tests/: test_import.py
